maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:11: error: ')' expected but ',' found.
  for (x<-0,11) {
           ^ShortestPathMaze:20: error: illegal start of simple expression
}
^ShortestPathMaze:27: error: ')' expected but ',' found.
  for (x<-0,11) {
           ^ShortestPathMaze:47: error: illegal start of simple expression
} 
^